Ditching dataio as address and general Cleanup